--- a/Quanlybantrasua/Quanlybantrasua.csproj
+++ b/Quanlybantrasua/Quanlybantrasua.csproj
@@ -69,6 +69,18 @@
     <Compile Include="DTO\ChitiethoadonView.cs" />
     <Compile Include="DTO\Hanghoastate.cs" />
     <Compile Include="DTO\Hanghoa_View.cs" />
+    <Compile Include="FormQLdoanhthu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormQLdoanhthu.designer.cs">
+      <DependentUpon>FormQLdoanhthu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Formthanhtoan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Formthanhtoan.designer.cs">
+      <DependentUpon>Formthanhtoan.cs</DependentUpon>
+    </Compile>
     <Compile Include="HANGHOA.cs">
       <DependentUpon>QLTS.tt</DependentUpon>
     </Compile>
@@ -146,7 +158,7 @@
     <Compile Include="View\FormQLdoanhthu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\FormQLdoanhthu.Designer.cs">
+    <Compile Include="View\FormQLdoanhthu.designer.cs">
       <DependentUpon>FormQLdoanhthu.cs</DependentUpon>
     </Compile>
     <Compile Include="View\FormQLkhachhang.cs">
@@ -167,11 +179,23 @@
     <Compile Include="View\GUI.Designer.cs">
       <DependentUpon>GUI.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\QLDT.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\QLDT.designer.cs">
+      <DependentUpon>QLDT.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Quanlyhanghoa.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\Quanlyhanghoa.Designer.cs">
       <DependentUpon>Quanlyhanghoa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Tankbar.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\Tankbar.Designer.cs">
+      <DependentUpon>Tankbar.cs</DependentUpon>
     </Compile>
     <Compile Include="View\Themmon.cs">
       <SubType>Form</SubType>
@@ -179,6 +203,12 @@
     <Compile Include="View\Themmon.designer.cs">
       <DependentUpon>Themmon.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="FormQLdoanhthu.resx">
+      <DependentUpon>FormQLdoanhthu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Formthanhtoan.resx">
+      <DependentUpon>Formthanhtoan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -213,8 +243,14 @@
     <EmbeddedResource Include="View\GUI.resx">
       <DependentUpon>GUI.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\QLDT.resx">
+      <DependentUpon>QLDT.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Quanlyhanghoa.resx">
       <DependentUpon>Quanlyhanghoa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Tankbar.resx">
+      <DependentUpon>Tankbar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\Themmon.resx">
       <DependentUpon>Themmon.cs</DependentUpon>
